@@ -28,7 +28,7 @@ defined('_JEXEC') or die;
 				<th><?php echo JText::_('Type') ?></th>
 				<th width="10%" class="center"><?php echo JText::_('Version'); ?></th>
 				<th><?php echo JText::_('Folder') ?></th>
-				<th><?php echo JText::_('Client') ?></th>
+				<th><?php echo JText::_('JClient') ?></th>
 				<th width="25%"><?php echo JText::_('Author'); ?></th>
 			</tr>
 		</thead>
