@@ -33,7 +33,6 @@ BACK_TO_LANGUAGE_MANAGER="Back to Language Manager"
 BACK_TO_TEMPLATES="Back to Templates"
 CANNOT_FIND_OR_READ_FILE="It was not possible to find or read the selected file"
 CANNOT_FIND_SOURCE_FILE="It has not been possible to locate the required source file"
-CLIENT="Client"
 COMPATIBILITY="Compatibility"
 COMPATIBLE_EXTENSION="This extension functions natively with Joomla! 1.6."
 COMPONENT_MENU_LINK="Component Menu Link"
