@@ -63,6 +63,7 @@ JMODIFY="Modify"
 JGROUPS="Groups"
 JMODIFY=Modify
 JGROUPS=Groups
+JCLIENT="Client"
 
 JINVALID_TOKEN="The most recent request was denied because it contained an invalid security token. Please refresh the page and try again."
 JERROR_NO_ITEMS_SELECTED="No item(s) selected."
@@ -489,7 +490,6 @@ EDIT_FILE="Edit File"
 EDITOR="Editor"
 EDIT_PLUGIN="Edit Plug-in"
 EDIT_SECTION="Edit Section"
-EDIT_USER="Edit User"
 EDIT_USER_INFORMATION="Edit User Information"
 EDIT_XML="Edit&nbsp;XML"
 EDIT_XML_FILE="Edit XML File"
